about fix spacing

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -10,6 +10,7 @@ body {
     margin: 0 auto;
     padding: 50px 20px;
     text-align: right;
+    margin-top: 30px;
     background-color: #EDEAE7;
 }
 
